--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,31 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
+
+  <!-- Primary Meta Tags -->
+<title>Axiom color wheel</title>
+<meta name="title" content="Axiom color wheel">
+<meta name="description" content="Explore the axiom colors sorted chromatically. Quickly copy the CSS var, hex value or name. Use the eyedropper to select a color from your screen.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://wheel-matt-evans.co.uk/">
+<meta property="og:title" content="Axiom color wheel">
+<meta property="og:description" content="Explore the axiom colors sorted chromatically. Quickly copy the CSS var, hex value or name. Use the eyedropper to select a color from your screen.">
+<meta property="og:image" content="%PUBLIC_URL%/cover.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://wheel-matt-evans.co.uk/">
+<meta property="twitter:title" content="Axiom color wheel">
+<meta property="twitter:description" content="Explore the axiom colors sorted chromatically. Quickly copy the CSS var, hex value or name. Use the eyedropper to select a color from your screen.">
+<meta property="twitter:image" content="%PUBLIC_URL%/cover.png">
 	<!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+	<link rel="shortcut icon" href="%PUBLIC_URL%/icon.png">
 
 	<!--
       Notice the use of %PUBLIC_URL% in the tags above.
